tests/macro_attributes/inner/02-invalid.stderr
error: expected boolean literal
 --> tests/macro_attributes/inner/02-invalid.rs:3:19
  |
3 | #[lazy_nd(inner = 10)]
  |                   ^^
