tests/macro_attributes/inner/02-invalid.rs
use lazy_nd::lazy_nd;

#[lazy_nd(inner = 10)]
struct Test {}

fn main() {}
